--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 #map {
-	width: 800px;
-	height: 500px;
+	/*width: 800px;*/
+	/*height: 500px;*/
 }
 
 .info {
@@ -28,5 +28,7 @@
 	margin-right: 8px;
 	opacity: 0.7;
 }
-
-h1 {margin-bottom: 9px;}
+.infobox {
+    /*border: 1px solid black; */
+    background-color: rgb(237,248,233);
+}
