--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,64 @@
-#map {
-	/*width: 800px;*/
-	/*height: 500px;*/
+---
+---
+
+{% include css/font.css %}
+
+body {
+  color #333;
+  /* This would match the blog background color. */
+  /* background-color: #efefef; */
+
+  font-family: museosans,sans-serif; 
 }
 
-.info {
-	padding: 6px 8px;
-	font: 14px/16px Arial, Helvetica, sans-serif;
-	background: white;
-	background: rgba(255,255,255,0.8);
-	box-shadow: 0 0 15px rgba(0,0,0,0.2);
-	border-radius: 5px;
-}
-.info h4 {
-	margin: 0 0 5px;
-	color: #777;
+h1, h2, h3, h4, h5, h6 {
+  color: #444;
+
+  font-family: museoslab,Georgia,times,serif;
 }
 
-.legend {
-	text-align: left;
-	line-height: 18px;
-	color: #555;
+.navbar {
+  /* Get rid of bottom padding so there's no gap below logo */
+  margin-bottom: 0;
 }
-.legend i {
-	width: 18px;
-	height: 18px;
-	float: left;
-	margin-right: 8px;
-	opacity: 0.7;
+
+.navbar-header:after {
+  clear: none;
 }
-.infobox {
-    /*border: 1px solid black; */
-    background-color: rgb(237,248,233);
+
+.navbar-icons>li {
+  float: left;
 }
+
+#logo-wrapper {
+  margin-bottom: 10px;
+
+  background-color: #dfd1cd;
+}
+
+#footer {
+  padding: 40px 0;
+
+  background-color: rgb(224, 224, 224);
+}
+
+#footer h4 {
+  padding-bottom: 10px;
+  border-bottom: 1px solid #999;
+}
+
+#footer .links {
+  padding-left: 0;
+
+  list-style-type: none;
+}
+
+#footer .links li {
+  padding: 5px 0;
+}
+
+#footer .links li a {
+  color: #777;
+}
+
+{% include css/map.css %}
