--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="row">
         <div id="main" class="col-md-8">
-          {{ foo }}
+            <h1>{% if page.display_title %}{{ page.display_title }}{% else %}{{ page.title }}{% endif %}</h1>
           {{ content }}
         </div>
         <div id="sidebar" class="col-md-4"></div>
