Add link to blog

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,6 +25,7 @@
         {% endif %}
         {% endif %}
         {% endfor %}
+        <li><a href="http://blog.openelections.net" class="external">Blog</a></li>
         <li><a href="https://github.com/openelections" class="external">GitHub</a></li>
         <li><a href="http://docs.openelections.net/" class="external">Documentation</a></li>
       </ul>
