--- a/_layouts/sidebar.html
+++ b/_layouts/sidebar.html
@@ -8,10 +8,11 @@
 
     <div class="container">
       <div class="row">
-        <div id="main" class="col-md-12">
+        <div id="main" class="col-md-8">
             <h1>{% if page.display_title %}{{ page.display_title }}{% else %}{{ page.title }}{% endif %}</h1>
           {{ content }}
         </div>
+        <aside id="sidebar" class="col-md-4"></aside>
       </div>
     </div>
 
