Make links work both locally and on GitHub pages
See http://jekyllrb.com/docs/github-pages/#project_page_url_structure

--- a/_includes/index_footer_scripts.html
+++ b/_includes/index_footer_scripts.html
@@ -1,3 +1,4 @@
+<script src="{{ site.baseurl }}/js/render-map.js"></script>
 <script>
 openelex.renderMap({
   statusJSON: 'data/state_status-20140310.json'
