--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
         {% if p.url != "/index.html" %}
         {% if p.url contains "css" %}
         {% else %}
-        <li {% if p.url == page.url %}class="active"{% endif %}><a href="{{ p.url }}">{{ p.title }}</a></li>
+        <li {% if p.url == page.url %}class="active"{% endif %}><a href="{{ site.baseurl }}{{ p.url }}">{{ p.title }}</a></li>
         {% endif %}
         {% endif %}
         {% endfor %}
@@ -36,6 +36,6 @@
 
 <div id="logo-wrapper">
   <div class="container">
-    <a href="{{ site.url }}"><img src="img/LogoFinal.jpg"></a>
+    <a href="{{ site.baseurl }}/"><img src="img/LogoFinal.jpg"></a>
   </div>
 </div>
