Update map and legend styling
Use colors from our pallete to fill states. Use CSS for fill
colors instead of setting them with D3.

Render a legend and make it responsive.

Add convention for sidebar includes.

Addresses
https://github.com/openelections/openelections-frontend/issues/4

--- a/_layouts/sidebar.html
+++ b/_layouts/sidebar.html
@@ -12,7 +12,11 @@
             <h1>{% if page.display_title %}{{ page.display_title }}{% else %}{{ page.title }}{% endif %}</h1>
           {{ content }}
         </div>
-        <aside id="sidebar" class="col-md-4"></aside>
+        <aside id="sidebar" class="col-md-4">
+          {% if page.sidebar_include %}
+          {% include {{page.sidebar_include}} %}
+          {% endif %}
+        </aside>
       </div>
     </div>
 
