--- a/_includes/css/map.css
+++ b/_includes/css/map.css
@@ -1,29 +1,50 @@
-.info {
-	padding: 6px 8px;
-	font: 14px/16px Arial, Helvetica, sans-serif;
-	background: white;
-	background: rgba(255,255,255,0.8);
-	box-shadow: 0 0 15px rgba(0,0,0,0.2);
-	border-radius: 5px;
-}
-.info h4 {
-	margin: 0 0 5px;
-	color: #777;
+
+#legend {
+  margin-bottom: 40px;
 }
 
-.legend {
-	text-align: left;
-	line-height: 18px;
-	color: #555;
+/*
+#legend dt, #legend dd {
+  float: left;
 }
-.legend i {
-	width: 18px;
-	height: 18px;
-	float: left;
-	margin-right: 8px;
-	opacity: 0.7;
+*/
+
+#legend dt {
+  width: 40px;
+  height: 20px;
+
+  float: left;
+  margin-bottom: 10px;
 }
-.infobox {
-    /*border: 1px solid black; */
-    background-color: rgb(237,248,233);
+
+#legend dd {
+  font-weight: bold;
+  padding: 0 40px 0 45px;
+  margin-bottom: 10px;
+}
+
+@media screen and (min-width: 520px) {
+  #legend dd {
+    float: left;
+    padding-left: 5px;
+  }
+}
+
+.not-started {
+  background-color: #32348c;
+  fill: #32348c;
+}
+
+.partial {
+  background-color: #4da6d5;
+  fill: #4da6d5;
+}
+
+.up-to-date {
+  background-color: #8bac91;
+  fill: #8bac91;
+}
+
+.default-instructions {
+  margin-top: 20px;
 }
