PNG logo instead of JPG
@SaraSchnadt mentioned that the logo looked blurry.

Try to correct this by generating a PNG from the SVG.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,6 +36,6 @@
 
 <div id="logo-wrapper">
   <div class="container">
-    <a href="{{ site.baseurl }}/"><img src="img/LogoFinal.jpg"></a>
+    <a href="{{ site.baseurl }}/"><img src="img/logo.png" width="320" height="62" alt="OpenElections logo"></a>
   </div>
 </div>
