--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,9 +10,9 @@
     </div>
 
     <ul class="nav navbar-nav navbar-icons navbar-right">
-      <li><a href="https://twitter.com/openelex"><i class="fa fa-twitter"></i></a>
-      <li><a href="http://vimeo.com/49450624"><i class="fa fa-vimeo-square"></i></a></li>
-      <li><a href="mailto:openelections@gmail.com"><i class="fa fa-envelope"></i></a>
+      <li><a href="https://twitter.com/openelex" class="new-window"><i class="fa fa-twitter"></i></a>
+      <li><a href="http://vimeo.com/49450624" class="new-window"><i class="fa fa-vimeo-square"></i></a></li>
+      <li><a href="mailto:openelections@gmail.com" class="new-window"><i class="fa fa-envelope"></i></a>
     </ul>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -25,9 +25,9 @@
         {% endif %}
         {% endif %}
         {% endfor %}
-        <li><a href="http://blog.openelections.net" class="external">Blog</a></li>
-        <li><a href="https://github.com/openelections" class="external">GitHub</a></li>
-        <li><a href="http://docs.openelections.net/" class="external">Documentation</a></li>
+        <li><a href="http://blog.openelections.net" class="new-window external">Blog</a></li>
+        <li><a href="https://github.com/openelections" class="new-window external">GitHub</a></li>
+        <li><a href="http://docs.openelections.net/" class="new-window external">Documentation</a></li>
       </ul>
     </div>
 
