Spacing and alignment tweaks
I made the following visual tweaks based on feedback from
@SaraSchnadt:

* Make navbar thinner.
* Left justify navbar links.
* Right justify navbar icons.
* Left justify text in main column.
* Right justify text in sidebar.
* Vertically align default instruction text with main heading.
* Make blue color in map match logo (#258bd1)
* Increase logo font size to 40px and scale checkmark glyph
  relatively.

I made these structural changes to support the above changes:

* Make the main column 9 grid columns wide and the sidebar 3
  grid columns wide instead of (8/4).  The right aligned text
  looked weird with 4 columns of space.
* Use d3's ``selection.classed()`` instead of ``selection.attr()``
  to set sidebar classes.

I made the following additional changes that I encountered as I
looked at the code:

* Add page title to ``<title>``.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>OpenElections: Certified election results. For everyone.</title>
+<title>{{ page.title }} | OpenElections: Certified election results. For everyone.</title>
 
 <link rel="icon" type="image/x-icon" href="img/favicon.ico">
 
