--- a/_includes/css/map.css
+++ b/_includes/css/map.css
@@ -1,14 +1,3 @@
-
-#legend {
-  margin-bottom: 40px;
-}
-
-/*
-#legend dt, #legend dd {
-  float: left;
-}
-*/
-
 #legend dt {
   width: 40px;
   height: 20px;
@@ -23,11 +12,8 @@
   margin-bottom: 10px;
 }
 
-@media screen and (min-width: 520px) {
-  #legend dd {
-    float: left;
-    padding-left: 5px;
-  }
+#map {
+  padding-bottom: 40px;
 }
 
 .not-started {
@@ -36,8 +22,8 @@
 }
 
 .partial {
-  background-color: #4da6d5;
-  fill: #4da6d5;
+  background-color: #258bd1; 
+  fill: #258bd1; 
 }
 
 .up-to-date {
@@ -47,4 +33,34 @@
 
 .default-instructions {
   margin-top: 20px;
+}
+
+@media screen and (min-width: 520px) {
+  body.map #sidebar {
+    text-align: right;
+  }
+
+  #legend {
+    margin-top: 30px;
+    margin-bottom: 80px;
+  }
+
+  #legend dd {
+    float: left;
+    padding-left: 5px;
+  }
+
+  .default-instructions {
+    vertical-align: bottom;
+    line-height: 1.1;
+    padding-top: 12px;
+  }
+
+  .infobox h2 {
+    padding-top: 8px;
+  }
+
+  .infobox dl {
+    margin-top: 30px;
+  }
 }
