--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,16 @@
   <head>
     {% include head.html %}
   </head>
-  <body>
+  <body class="{{ page.title | handleize | downcase }}{% if page.body_class %} {{ page.body_class }}{% endif %}">
     {% include header.html %} 
 
     <div class="container">
       <div class="row">
         <div id="main" class="col-md-12">
+            {% if page.hide_default_heading %}
+            {% else %}
             <h1>{% if page.display_title %}{{ page.display_title }}{% else %}{{ page.title }}{% endif %}</h1>
+            {% endif %}
           {{ content }}
         </div>
       </div>
