--- a/_layouts/sidebar.html
+++ b/_layouts/sidebar.html
@@ -3,16 +3,19 @@
   <head>
     {% include head.html %}
   </head>
-  <body>
+  <body class="{{ page.title | handleize | downcase }}{% if page.body_class %} {{ page.body_class }}{% endif %}">
     {% include header.html %} 
 
     <div class="container">
       <div class="row">
-        <div id="main" class="col-md-8">
+        <div id="main" class="col-md-9">
+            {% if page.hide_default_heading %}
+            {% else %}
             <h1>{% if page.display_title %}{{ page.display_title }}{% else %}{{ page.title }}{% endif %}</h1>
+            {% endif %}
           {{ content }}
         </div>
-        <aside id="sidebar" class="col-md-4">
+        <aside id="sidebar" class="col-md-3">
           {% if page.sidebar_include %}
           {% include {{page.sidebar_include}} %}
           {% endif %}
