Replace absolute sizing on header image with fluid/max-width

--- a/_includes/css/header.css
+++ b/_includes/css/header.css
@@ -25,6 +25,11 @@
   background-color: #dfd1cd;
 }
 
+#logo-wrapper img {
+  width: 100%;
+  max-width: 371px;
+}
+
 @media (min-width: 768px) {
   .navbar-nav>li>a {
     padding-top: 5px;
