Filter elections based on office
Add a Backbone view, some additional logic to the Elections
collection and handlers for a ``filter`` event on the collection
to filter the results table by office.

Addresses https://github.com/openelections/core/issues/157

--- a/_includes/css/results.css
+++ b/_includes/css/results.css
@@ -1,3 +1,7 @@
+label[for="office-filter"] {
+  margin-right: 10px;
+}
+
 th.year-heading:before {
   display: inline-block;
   font-family: FontAwesome;
