--- a/_includes/index_footer_scripts.html
+++ b/_includes/index_footer_scripts.html
@@ -1,3 +1,4 @@
+<script src="{{ site.baseurl }}/js/states.js"></script>
 <script src="{{ site.baseurl }}/js/render-map.js"></script>
 <script>
 openelex.renderMap({
