Election date filtering widget.
Add method to retrieve ordered list of all elections in an
Elections collection.

Add a view that leverages the [jQuery UI
slider](http://jqueryui.com/slider/#range) to set a range of
dates for filtering the available elections.

Wire up some Backbone events to connect the filter changes to
re-rendering the elections table.

Addresses https://github.com/openelections/core/issues/165

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,4 +6,7 @@
 
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+{% for src in page.stylesheets %}
+<link href="{{ src }}" rel="stylesheet">
+{% endfor %}
 <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css" />
