Hide overlapping years
When there are very few elections for a particular year, the
next year's label will overlap this.

Try to work around this by giving the year labels a background
color so the text doesn't overlap and give the label elements a
title so we can see the full year on mouseover.

Addresses
https://github.com/openelections/openelections.github.io/issues/8

--- a/_includes/css/slider.css
+++ b/_includes/css/slider.css
@@ -93,9 +93,10 @@
 
 .date-slider label {
   position: absolute;
-  width: 20px;
+  min-width: 20px;
   border-left: #000 1px solid;
   margin-top: 15px;
   padding-left: 2px;
-  text-align: center;
+  /* HACK: Set background color to white to hide overlapping years */
+  background-color: #fff;
 }
