Refine results download page
Add column for congressional district results.

Show whether the race type is special and runoff in the table.
Move the generation of the label into a method of the ``Election``
model so it can be used in multiple views.

Float the office filter alongside the table heading.

Make the download icons pink.

Size date filter bars and slider to more closely match the spec.

Make slider colors more closely match the spec by having a light
gray background and a dark gray selected region.

Remove jQuery UI stylesheets since we define all the styles we need
in our own stylesheets.

Addresses https://github.com/openelections/core/issues/168

--- a/_includes/css/results.css
+++ b/_includes/css/results.css
@@ -1,5 +1,11 @@
 .results-heading {
   text-transform: uppercase;
+  float: left;
+}
+
+#office-filter-container {
+  margin-top: 20px; /* This should match the margin on .results-heading */
+  text-align: right;
 }
 
 label[for="office-filter"] {
@@ -30,4 +36,8 @@ tr.election {
 
 tr.election.open {
   display: table-row;
+}
+
+tr.election a {
+  color: #ed4c6b; /* pink */
 }
