--- a/_includes/css/results.css
+++ b/_includes/css/results.css
@@ -10,6 +10,61 @@
 
 label[for="office-filter"] {
   margin-right: 10px;
+  color: #22262a;
+}
+
+#results-table {
+  margin-top: 30px;
+}
+
+#results-table td {
+  border-top-color: #dedfe0;
+}
+
+#results-table thead th {
+  font-family: museoslab;
+  font-weight: normal;
+  color: #22262a;
+  padding: 2px 8px;
+  border-color: #6a6e72;
+}
+
+#results-table thead tr:first-child {
+  border: none;
+}
+
+#results-table thead tr:first-child th {
+  font-size: 1.1em;
+  border: none;
+  padding: 0 8px;
+}
+
+#results-table thead th {
+  border-top: none;
+}
+
+/* Define min-width on "Date" and "Race" column heading cells to avoid */
+/* content hopping around when result rows are expanded */
+#results-table thead tr:first-child th:first-child {
+  min-width: 140px;
+}
+
+#results-table thead tr:first-child th:nth-child(2) {
+  min-width: 85px;
+}
+
+#results-table tbody td,
+#results-table tbody th {
+  padding: 4px 8px;
+}
+
+tr.year-heading + tr td {
+  border-top-color: #b2b2b2 !important;
+}
+
+th.year-heading {
+  font-size: 1.1em;
+  color: #22262a;
 }
 
 th.year-heading:before {
@@ -38,6 +93,14 @@ tr.election.open {
   display: table-row;
 }
 
+tr.election td {
+  color: #5e5e5e;
+}
+
 tr.election a {
   color: #ed4c6b; /* pink */
+}
+
+td.download {
+  text-align: center;
 }
