--- a/_includes/css/slider.css
+++ b/_includes/css/slider.css
@@ -1,13 +1,19 @@
+/* Styles for the date range selections filter on the results download page */
+
 .ui-slider {
   border: 1px solid #aaaaaa;
-  background-color: #999; /* Light gray */
+  background-color: #ccc; /* Light gray */
+}
+
+.ui-slider-horizontal {
+  height: 0.5em; /* ~5px */
 }
 
 .ui-slider .ui-slider-handle {
   position: absolute;
   z-index: 2;
-  width: 1em;
-  height: 1em;
+  width: .7em;
+  height: .7em;
   cursor: default;
 
   /* Make the border a circle */
@@ -23,12 +29,12 @@
   display: block;
   border: 0;
   background-position: 0 0;
-  background: #333; /* Dark gray */
+  background: #6a6e72; /* Dark gray */
 }
 
 .ui-slider-horizontal .ui-slider-handle {
-  top: -.2em;
-  margin-left: -.5em;
+  top: -.17em;
+  margin-left: -.32em;
 }
 
 .ui-slider-horizontal .ui-slider-range {
@@ -38,7 +44,7 @@
 
 #date-filter-container {
   position: relative;
-  height: 150px;
+  height: 140px;
 }
 
 #date-filter-container .elections {
@@ -50,7 +56,7 @@
   position: absolute;
   top: 0;
   width: 5px;
-  height: 80px;
+  height: 65px;
   background-color: red;
   margin-left: -2.5px;
 }
@@ -62,46 +68,45 @@
 
 #legend-race-type .primary,
 #date-filter-container .election.primary {
-  background-color: #32348c; /* purple */
+  background-color: #30358c; /* Purple */
 }
 
 #legend-race-type .primary.special,
 #date-filter-container .election.primary.special {
-  background-color: #7b84ba; /* light purple */
+  background-color: #7b84ba; /* Light purple */
 }
 
 #legend-race-type .general,
 #date-filter-container .election.general {
-  background-color: #258bd1; /* blue */
+  background-color: #258bd1; /* Blue */
 }
 
 #legend-race-type .general.special,
 #date-filter-container .election.general.special {
-  background-color: #81c5e2; /* light blue */
+  background-color: #81c5e2; /* Light blue */
 }
 
 #legend-race-type .runoff,
 #date-filter-container .general-runoff,
 #date-filter-container .primary-runoff {
-  background-color: #8bac91; /* green */
+  background-color: #79a888; /* Green */
 }
 
 .date-slider {
   position: absolute;
-  top: 84px;
+  top: 68px;
   width: 100%;
-}
-
-.ui-slider-horizontal {
-  height: 0.7em;
 }
 
 .date-slider label {
   position: absolute;
   min-width: 20px;
-  border-left: #000 1px solid;
-  margin-top: 15px;
+  border-left: #6a6e72 1px solid;
+  margin-top: 0.6em;
   padding-left: 2px;
+  color: #22262a;
   /* HACK: Set background color to white to hide overlapping years */
   background-color: #fff;
+
+  font-size: 1.05em; /* ~17px */
 }
