--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>{{ page.title }} | OpenElections: Certified election results. For everyone.</title>
 
-<link rel="icon" type="image/x-icon" href="{{ site.baseurl }}/img/favicon.ico">
+<link rel="icon" type="image/x-icon" href="{{ site.baseurl }}/img/icon/favicon.ico">
 
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
