--- a/_includes/css/slider.css
+++ b/_includes/css/slider.css
@@ -12,8 +12,8 @@
 .ui-slider .ui-slider-handle {
   position: absolute;
   z-index: 2;
-  width: .7em;
-  height: .7em;
+  width: 1em;
+  height: 1em;
   cursor: default;
 
   /* Make the border a circle */
@@ -33,8 +33,8 @@
 }
 
 .ui-slider-horizontal .ui-slider-handle {
-  top: -.17em;
-  margin-left: -.32em;
+  top: -.34em;
+  margin-left: -.5em;
 }
 
 .ui-slider-horizontal .ui-slider-range {
