Render state status as table
Fixes https://github.com/openelections/openelections.github.io/issues/18

--- a/_includes/css/map.css
+++ b/_includes/css/map.css
@@ -81,7 +81,9 @@
 .infobox.metadata .results, 
 .infobox.metadata .results-detail, 
 .infobox.results-detail .metadata,
-.infobox.results-detail .results {
+.infobox.results-detail .results,
+.metadata .table-states.results,
+.results .table-states.metadata {
   display: none;
 }
 
