Add stateface-based icons to state headings
Fixes https://github.com/openelections/openelections.github.io/issues/29

--- a/_includes/css/font.css
+++ b/_includes/css/font.css
@@ -85,3 +85,14 @@
     font-weight: bold;
     font-style: normal;
 }
+
+@font-face {
+  font-family: 'StateFaceRegular';
+  src: url('../font/stateface-regular-webfont.eot');
+  src: url('../font/stateface-regular-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../font/stateface-regular-webfont.woff') format('woff'),
+  url('../font/stateface-regular-webfont.ttf') format('truetype'),
+  url('../font/stateface-regular-webfont.svg#StateFaceRegular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
