--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 ---
 
 {% include css/font.css %}
+{% include css/stateface.css %}
 {% include css/base.css %}
 {% include css/header.css %}
 {% include css/footer.css %}
