--- a/_sass/_people.scss
+++ b/_sass/_people.scss
@@ -2,16 +2,14 @@
   min-height: 80px;
   clear: both;
   margin-bottom: 40px;
+
+  .headshot {
+    display: block;
+    float: left;
+    margin-right: 20px;
+  }
 }
 
 .core-team {
   min-height: 180px;
 }
-
-.person .headshot {
-  display: block;
-  float: left;
-  margin-right: 20px;
-}
-
-
