Make state names link in status table
Make state name a link to the results detail page for that state.

Make links pink and bold.

Factor logic to generate link to the results detail page into a
model method.

Addresses
https://github.com/openelections/openelections.github.io/issues/32

--- a/_sass/_map.scss
+++ b/_sass/_map.scss
@@ -182,3 +182,11 @@ dd.map-link a:after {
     margin-top: 10px;
   }
 }
+
+// Table version of status map
+.table-states {
+  td:first-child a {
+    color: $highlight-color;
+    font-weight: bold;
+  }
+}
