Reposition the elections table filters
Reposition the elections table filters so they always stack below
each other instead of shifting in position depending on screen
with and length of the table title.

Slightly decrease the distance between the filter widgets and
increase the distance between the widgets and the table heading
below.

Move the "Filter by" label to the top filter widget ("Race Type")

Addresses
https://github.com/openelections/openelections.github.io/issues/16

--- a/_sass/_results.scss
+++ b/_sass/_results.scss
@@ -8,9 +8,8 @@
 
 #office-filter-container,
 #race-type-filter-container {
-  float: right;
   margin-left: 20px;
-  margin-top: 20px; // This should match the margin on .results-heading
+  margin-top: 8px;
   text-align: right;
 
   label {
@@ -19,12 +18,16 @@
   }
 }
 
-label[for="office-filter"]:before {
+#race-type-filter-container {
+  margin-top: 20px;
+}
+
+label[for="race_type-filter"]:before {
   content: "Filter by ";
 }
 
 #results-table {
-  margin-top: 30px;
+  margin-top: 34px;
 
   td {
     border-top-color: #dedfe0;
