--- a/_includes/results_footer_scripts.html
+++ b/_includes/results_footer_scripts.html
@@ -2,11 +2,35 @@
 <script src="{{ site.baseurl }}/js/results.js"></script>
 <script>
 $(function() {
+  /**
+   * Get parameter from browser querystring.
+   * Based on http://css-tricks.com/snippets/javascript/get-url-variables/
+   */
+  function getQueryVariable(variable, query) {
+     query = query || window.location.search.substring(1);
+     var vars = query.split("&");
+     var i, pair;
+
+     if (!query) {
+       return false;
+     }
+
+     for (i=0; i<vars.length; i++) {
+        pair = vars[i].split("=");
+        if (pair[0] == variable) {
+          return pair[1] ? pair[1]: true;
+        }
+     }
+     return false;
+  }
+
   var app = new openelex.ResultsApp('#results-container', {
     root: "/results/",
     dataRoot: "/data",
     statusJSON: '/data/state_status.json',
-    sidebarEl: '#sidebar'
+    sidebarEl: '#sidebar',
+    showElectionCountLegend: !getQueryVariable('hidecountlegend',
+      window.location.hash.split('?')[1])
   });
 });
 </script>
