--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:xlink="http://www.w3.org/1999/xlink">
   <head>
     {% include head.html %}
   </head>
   <body class="{{ page.title | handleize | downcase }}{% if page.body_class %} {{ page.body_class }}{% endif %}">
-    {% include header.html %} 
+    {% include header.html %}
 
     <div class="container">
       <div class="row">
