--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
 
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link href="//cdnjs.cloudflare.com/ajax/libs/d3/4.4.0/d3.min.js" rel="javacript">
 {% for src in page.stylesheets %}
 <link href="{{ src }}" rel="stylesheet">
 {% endfor %}
