--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,9 +19,11 @@
       <ul class="nav navbar-nav">
         {% for p in site.pages %}
         {% if p.url != "/index.html" %}
+        {% if p.url != "/results/index.html" %}
         {% if p.url contains "css" %}
         {% else %}
         <li {% if p.url == page.url %}class="active"{% endif %}><a href="{{ site.baseurl }}{{ p.url }}">{{ p.title }}</a></li>
+        {% endif %}
         {% endif %}
         {% endif %}
         {% endfor %}
