changing header and legend colors

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -12,14 +12,16 @@ $blue: #2f98cc;
 $light-blue: #aae3e8;
 $green: #79a888;
 $pink: #ed4c6b;
+$clean: #79a888;
 
 $primary-color: #333;
-$header-color: #444;
+$header-color: #6a6e72;
 $footer-background-color: rgb(224, 224, 224);
 $footer-link-color: #777; 
 $not-started-color: $purple;
 $partial-color: $blue;
 $up-to-date-color: $green;
+$raw: #258bd1;
 $highlight-color: $pink;
 $primary-elec-color: $purple;
 $special-primary-elec-color: $light-purple;
