--- a/_sass/_map.scss
+++ b/_sass/_map.scss
@@ -46,7 +46,7 @@
 .legend dd {
   padding: 0 40px 0 45px;
   margin-bottom: 10px;
-
+  color: $dark-gray;
   font-size: 1.3em;
   line-height: 1.2em;
   font-weight: bold;
